myproxy-oauth (0.23-1+gt6.@distro@) @distro@; urgency=low

  * Fix indent issue

 -- Globus Toolkit <support@globus.org>  Fri, 04 Nov 2016 13:02:00 -0400

myproxy-oauth (0.22-1+gt6.@distro@) @distro@; urgency=low

  * Catch exceptions and return "400 Bad Request"

 -- Globus Toolkit <support@globus.org>  Tue, 18 Oct 2016 14:41:29 -0400

myproxy-oauth (0.21-2+gt6.@distro@) @distro@; urgency=low

  * Fix redirect when callback_uri contains a query

 -- Globus Toolkit <support@globus.org>  Thu, 10 Mar 2016 11:17:33 -0500

myproxy-oauth (0.20-1+gt6.@distro@) @distro@; urgency=low

  * Use setsebool if it is installed and semanage is not available

 -- Globus Toolkit <support@globus.org>  Thu, 29 Oct 2015 08:53:56 -0400

myproxy-oauth (0.19-2+gt6.@distro@) @distro@; urgency=low

  * Add lsb-release build dependency

 -- Globus Toolkit <support@globus.org>  Mon, 27 Apr 2015 09:16:09 -0400

myproxy-oauth (0.19-1+gt6.@distro@) @distro@; urgency=low

  * Use TLSv1
  * Support for apache-2.4 versions on debian

 -- Globus Toolkit <support@globus.org>  Thu, 23 Apr 2015 11:26:03 -0400

myproxy-oauth (0.18-3+gt6.@distro@) @distro@; urgency=low

  * Run selinux commands as root
  * Run database commands as myproxyoauth
  * Remove python-httplib2 dependency in unused code
  * Add python build dependency
  * build and install when building with -A

 -- Globus Toolkit <support@globus.org>  Tue, 11 Nov 2014 17:07:07 -0500

myproxy-oauth (0.15-3+gt6.@distro@) @distro@; urgency=low

  * Change section from unknown to net

 -- Globus Toolkit <support@globus.org>  Wed, 03 Sep 2014 21:35:18 -0400

myproxy-oauth (0.15-2+gt6.@distro@) @distro@; urgency=low

  * Handle Ubuntu 14.04 apache2 configuation layout

 -- Globus Toolkit <support@globus.org>  Fri, 01 Aug 2014 13:27:42 -0400

myproxy-oauth (0.15-1+gt6.@distro@) @distro@; urgency=low

  * EC2-Aware public hostname

 -- Globus Toolkit <support@globus.org>  Thu, 31 Jul 2014 13:48:06 -0400
